[gd_scene load_steps=9 format=3 uid="uid://dsihlvfka7ngv"]

[ext_resource type="Texture2D" uid="uid://ch6pcmforeo5t" path="res://sprites/battleback1_0.png" id="1_eyqn6"]
[ext_resource type="Script" path="res://battle.gd" id="2_wd3nu"]

[sub_resource type="Animation" id="Animation_ig71k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_r563b"]
resource_name = "valid_target"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.494118), Color(1, 1, 1, 1), Color(1, 1, 1, 0.478431)]
}

[sub_resource type="Animation" id="Animation_dkd0e"]
resource_name = "low_resource"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t2ysc"]
_data = {
"RESET": SubResource("Animation_ig71k"),
"low_resource": SubResource("Animation_dkd0e"),
"valid_target": SubResource("Animation_r563b")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0fdjh"]
bg_color = Color(0.670588, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vmcui"]
bg_color = Color(0, 0.631373, 0.129412, 1)

[node name="Battle_Level" type="TextureRect"]
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_eyqn6")
script = ExtResource("2_wd3nu")
metadata/_edit_horizontal_guides_ = [648.0]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(384, 144)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="PlayerPortrait" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
text = "Click me to end turn"

[node name="PlayerTeamResource" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/PlayerPortrait"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "Resource"

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/PlayerPortrait/PlayerTeamResource"]
libraries = {
"": SubResource("AnimationLibrary_t2ysc")
}

[node name="MainInfoPanel" type="Panel" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/MainInfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Main info panel"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="EnemyPortrait" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Enemy Portrait"

[node name="EnemyTeamResource" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/EnemyPortrait"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "Resource"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="PlayerTeam" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerCharacter1" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam"]
layout_mode = 2
size_flags_vertical = 3

[node name="Char1Portrait" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter1"]
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 0

[node name="Healthbar" type="ProgressBar" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter1/Char1Portrait"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_0fdjh")
theme_override_styles/fill = SubResource("StyleBoxFlat_vmcui")
value = 50.0
show_percentage = false

[node name="HealthTracker" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter1/Char1Portrait/Healthbar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "50/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter1/Char1Portrait"]
libraries = {
"": SubResource("AnimationLibrary_t2ysc")
}

[node name="Char1Ability1" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter1"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ability 1"

[node name="Char1Ability2" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter1"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ability 2"

[node name="Char1Ability3" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter1"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ability 3"

[node name="BuffDebuffs" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter1"]
layout_mode = 2
size_flags_horizontal = 3
text = "Buffs/
Debuffs"
flat = true

[node name="PlayerCharacter2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam"]
layout_mode = 2
size_flags_vertical = 3

[node name="Char2Portrait" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter2"]
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 0

[node name="Healthbar" type="ProgressBar" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter2/Char2Portrait"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_0fdjh")
theme_override_styles/fill = SubResource("StyleBoxFlat_vmcui")
value = 50.0
show_percentage = false

[node name="HealthTracker" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter2/Char2Portrait/Healthbar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "50/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter2/Char2Portrait"]
libraries = {
"": SubResource("AnimationLibrary_t2ysc")
}

[node name="Char2Ability1" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ability 1"

[node name="Char2Ability2" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ability 2"

[node name="Char2Ability3" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ability 3"

[node name="BuffDebuffs" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Buffs/
Debuffs"
flat = true

[node name="PlayerCharacter3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam"]
layout_mode = 2
size_flags_vertical = 3

[node name="Char3Portrait" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter3"]
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 0

[node name="Healthbar" type="ProgressBar" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter3/Char3Portrait"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_0fdjh")
theme_override_styles/fill = SubResource("StyleBoxFlat_vmcui")
value = 50.0
show_percentage = false

[node name="HealthTracker" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter3/Char3Portrait/Healthbar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "50/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter3/Char3Portrait"]
libraries = {
"": SubResource("AnimationLibrary_t2ysc")
}

[node name="Char3Ability1" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ability 1"

[node name="Char3Ability2" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ability 2"

[node name="Char3Ability3" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ability 3"

[node name="BuffDebuffs" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Buffs/
Debuffs"
flat = true

[node name="EnemyTeam" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EnemyCharacter1" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam"]
layout_direction = 3
layout_mode = 2
size_flags_vertical = 3

[node name="Enemy1Portrait" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam/EnemyCharacter1"]
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 0

[node name="Healthbar" type="ProgressBar" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam/EnemyCharacter1/Enemy1Portrait"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_0fdjh")
theme_override_styles/fill = SubResource("StyleBoxFlat_vmcui")
value = 50.0
show_percentage = false

[node name="HealthTracker" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam/EnemyCharacter1/Enemy1Portrait/Healthbar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "50/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam/EnemyCharacter1/Enemy1Portrait"]
libraries = {
"": SubResource("AnimationLibrary_t2ysc")
}

[node name="Enemy1Ability1" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam/EnemyCharacter1"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ability 1"

[node name="Enemy1Ability2" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam/EnemyCharacter1"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ability 2"

[node name="Enemy1Ability3" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam/EnemyCharacter1"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ability 3"

[node name="BuffDebuffs" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam/EnemyCharacter1"]
layout_mode = 2
size_flags_horizontal = 3
text = "Buffs/
Debuffs"
flat = true

[node name="EnemyCharacter2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam"]
layout_direction = 3
layout_mode = 2
size_flags_vertical = 3

[node name="Enemy2Portrait" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam/EnemyCharacter2"]
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 0

[node name="Healthbar" type="ProgressBar" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam/EnemyCharacter2/Enemy2Portrait"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_0fdjh")
theme_override_styles/fill = SubResource("StyleBoxFlat_vmcui")
value = 50.0
show_percentage = false

[node name="HealthTracker" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam/EnemyCharacter2/Enemy2Portrait/Healthbar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "50/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam/EnemyCharacter2/Enemy2Portrait"]
libraries = {
"": SubResource("AnimationLibrary_t2ysc")
}

[node name="Enemy2Ability1" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam/EnemyCharacter2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ability 1"

[node name="Enemy2Ability2" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam/EnemyCharacter2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ability 2"

[node name="Enemy2Ability3" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam/EnemyCharacter2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ability 3"

[node name="BuffDebuffs" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam/EnemyCharacter2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Buffs/
Debuffs"
flat = true

[node name="EnemyCharacter3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam"]
layout_direction = 3
layout_mode = 2
size_flags_vertical = 3

[node name="Enemy3Portrait" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam/EnemyCharacter3"]
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 0

[node name="Healthbar" type="ProgressBar" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam/EnemyCharacter3/Enemy3Portrait"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_0fdjh")
theme_override_styles/fill = SubResource("StyleBoxFlat_vmcui")
value = 50.0
show_percentage = false

[node name="HealthTracker" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam/EnemyCharacter3/Enemy3Portrait/Healthbar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "50/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam/EnemyCharacter3/Enemy3Portrait"]
libraries = {
"": SubResource("AnimationLibrary_t2ysc")
}

[node name="Enemy3Ability1" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam/EnemyCharacter3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ability 1"

[node name="Enemy3Ability2" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam/EnemyCharacter3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ability 2"

[node name="Enemy3Ability3" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam/EnemyCharacter3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ability 3"

[node name="BuffDebuffs" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam/EnemyCharacter3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Buffs/
Debuffs"
flat = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/PlayerPortrait" to="." method="_on_player_portrait_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter1/Char1Portrait" to="." method="_on_char_1_portrait_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter1/Char1Ability1" to="." method="_on_char_1_ability_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter1/Char1Ability2" to="." method="_on_char_1_ability_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter1/Char1Ability3" to="." method="_on_char_1_ability_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter2/Char2Portrait" to="." method="_on_char_2_portrait_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter2/Char2Ability1" to="." method="_on_char_2_ability_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter2/Char2Ability2" to="." method="_on_char_2_ability_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter2/Char2Ability3" to="." method="_on_char_2_ability_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter3/Char3Portrait" to="." method="_on_char_3_portrait_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter3/Char3Ability1" to="." method="_on_char_3_ability_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter3/Char3Ability2" to="." method="_on_char_3_ability_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlayerTeam/PlayerCharacter3/Char3Ability3" to="." method="_on_char_3_ability_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam/EnemyCharacter1/Enemy1Portrait" to="." method="_on_enemy_portrait_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam/EnemyCharacter2/Enemy2Portrait" to="." method="_on_enemy_2_portrait_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/EnemyTeam/EnemyCharacter3/Enemy3Portrait" to="." method="_on_enemy_3_portrait_pressed"]
